<resources>
    <string name="xq_app_name">相亲网</string>
    <string name="register_now">注册</string>
    <string name="login">登录</string>
    <string name="input_phone">请输入手机号</string>
    <string name="password_six_twenty">请输入密码(6–20位)</string>
    <string name="forgot_password">忘记密码</string>
    <string name="register_tips">您的性别、生日、身高、学历、婚姻状况注册后将不能修改，请认真填写。</string>
    <string name="service_treaty_and_privacy_policy">已阅读和同意珍爱网的</string>
    <string name="terms">服务条款</string>
    <string name="he">和</string>
    <string name="termstxt">服务条款</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tab_text_1">缘分</string>
    <string name="tab_text_2">搜索</string>
    <string name="tab_text_3">信箱</string>
    <string name="tab_text_4">附近</string>
    <string name="tab_text_5">我</string>
    <string name="edit">编辑</string>
    <string name="client_id_desc">每一个终端称为一个 client。\n Client 拥有一个在应用内唯一标识自己的 id。\n 这个 id 由应用自己定义</string>
    <string name="conversation_desc">开始聊天之前，需要先创建或者加入一个对话，然后再邀请其他人进来，之后所有参与者在这个对话内进行交流。</string>
    <string name="welcome">您好 </string>
    <string name="create_conversation">创建一个和机器人的对话</string>
    <string name="join_conversation">加入一个已有对话</string>
    <string name="online_site">http://leancloud.github.io/js-realtime-sdk/demo/demo2/</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logout">注销</string>
    <string name="begin_chat">开始聊天</string>
    <string name="otherId_input_hint">请输入对方的 clientId</string>


    <string name="square_name">广场</string>
    <string name="square_member_title">在线成员列表</string>
    <string name="login_null_name_tip">请输入用户名</string>

    <string name="unspport_message_type">暂不支持此消息类型</string>
    <string name="message_is_null">消息不能为空</string>
</resources>